--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>game</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script type="text/javascript" src="index.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kanit:900" rel="stylesheet">
 </head>
 <body>
 	<noscript>You do not have the javascripts enabled</noscript>
