Add timer element

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
 	<noscript>You do not have the javascripts enabled</noscript>
-	<div id="root" class="board" />
+	<div id="board" class="board"></div>
+	<div id="timer" class="timer"></div>
 </body>
