Change title to 'Boggle'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
 	<meta charset="utf-8">
-	<title>game</title>
+	<title>Boggle</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script type="text/javascript" src="index.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Kanit:900" rel="stylesheet">
